--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,7 @@
     <h1>{{ title }}</h1>
     <app-button 
     color="red" 
+    text="Now"
     text="Add" 
     (btnClick)="toggleAddTask()">
 </app-button>
