--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,7 @@
 <header>
     <h1>{{ title }}</h1>
     <app-button 
-    color="red" 
-    text="Now"
+    color="green" 
     text="Add" 
     (btnClick)="toggleAddTask()">
 </app-button>
